<?xml version="1.0"?>
<package>
  <name>vive_monitoring</name>
  <version>0.0.1</version>
  <description>Tmp package to test vive visualization</description>

  <maintainer email="lhofer@labri.fr">Ludovic Hofer</maintainer>

  <license>LGPLV3</license>

  <author email="lhofer@labri.fr">Ludovic Hofer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hl_monitoring</build_depend>
  <build_depend>vive_provider</build_depend>

  <run_depend>hl_monitoring</run_depend>
  <run_depend>vive_provider</run_depend>

</package>
